kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: shalog
  labels:
    app: shalog
    language: Golang
    version: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shalog
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shalog
        name: shalog
        version: latest
    spec:
      containers:
        - image: dudulu/shalog:latest
          name: shalog
          ports:
            - name: http-8080
              containerPort: 8080
          command:
            - /go/bin/shalog
          args:
            - start
            - -p
            - :8080
            - -c
            - /etc/shalog/app.cfg
            - -i
            - local
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 256Mi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
