kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shalog
  name: shalog
spec:
  ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: shalog
  type: ClusterIP
