kubernetes/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: shalog
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: shalog.nsini.com
      http:
        paths:
          - backend:
              serviceName: shalog
              servicePort: 8080
